@@ -300,7 +300,7 @@ test_cursor3(void *data __UNUSED__, Evas_Object *obj __UNUSED__, void *event_inf
 
    o = elm_button_add(win);
    elm_object_cursor_set(o, ELM_CURSOR_HAND1);
-   elm_object_cursor_theme_search_enabled_set(o, EINA_FALSE);
+   elm_object_cursor_theme_search_enabled_set(o, EINA_TRUE);
    elm_object_text_set(o, "hand1");
    elm_box_pack_end(bx, o);
    evas_object_show(o);
@@ -313,21 +313,21 @@ test_cursor3(void *data __UNUSED__, Evas_Object *obj __UNUSED__, void *event_inf
 
    o = elm_button_add(win);
    elm_object_cursor_set(o, ELM_CURSOR_HAND2);
-   elm_object_cursor_theme_search_enabled_set(o, EINA_FALSE);
+   elm_object_cursor_theme_search_enabled_set(o, EINA_TRUE);
    elm_object_text_set(o, "hand2");
    elm_box_pack_end(bx, o);
    evas_object_show(o);
 
    o = elm_button_add(win);
    elm_object_cursor_set(o, "hand3");
-   elm_object_cursor_theme_search_enabled_set(o, EINA_FALSE);
+   elm_object_cursor_theme_search_enabled_set(o, EINA_TRUE);
    elm_object_text_set(o, "hand3");
    elm_box_pack_end(bx, o);
    evas_object_show(o);
 
    o = elm_button_add(win);
    elm_object_cursor_set(o, "hand3");
-   elm_object_cursor_theme_search_enabled_set(o, EINA_FALSE);
+   elm_object_cursor_theme_search_enabled_set(o, EINA_TRUE);
    elm_object_cursor_style_set(o, "transparent");
    elm_object_text_set(o, "hand3 transparent");
    elm_box_pack_end(bx, o);
@@ -335,7 +335,7 @@ test_cursor3(void *data __UNUSED__, Evas_Object *obj __UNUSED__, void *event_inf
 
    o = elm_button_add(win);
    elm_object_cursor_set(o, "hand3");
-   elm_object_cursor_theme_search_enabled_set(o, EINA_FALSE);
+   elm_object_cursor_theme_search_enabled_set(o, EINA_TRUE);
    elm_object_cursor_unset(o);
    elm_object_text_set(o, "unset");
    elm_box_pack_end(bx, o);
