@@ -220,6 +220,7 @@ Fixes:
    * Fix the scrolled entry in scroller is located wrong position when the cursor is changed.
    * Fix null pointer access on naviframe item deletion.
    * Fix the toolbar item clipped problem on reordering items.
+   * Fix elm_object_cursor_theme_search_enabled_set to do as it's name described.
 
 Removals:
 
